# market-stream-monitor

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: tests.yml
data/: sample-stream.jsonl
db/: database.py  models.py  store.py
processing/: alerts.py  bars.py
streaming/: client.py  messages.py  providers.py  replay.py
tests/: conftest.py  test_alerts.py  test_bars.py  test_cli.py  test_dashboard.py  test_streaming.py
