[project]
name = "market-stream-monitor"
version = "1.1.0"
description = "Real-time market data monitor with live websocket ingestion, streaming minute bars and anomaly alerts"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.6.17",
    "plotly>=6.9.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.13.0",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "mypy>=2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.0",
    "pytest-cov>=7.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# E501: line length is handled by the formatter
ignore = ["E501"]

[tool.mypy]
files = ["streaming", "processing", "db", "main.py", "app.py"]
python_version = "3.12"
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["plotly.*", "streamlit.*", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
